--- a/Web/index.html
+++ b/Web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"> </script>
 	<script src = "https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
@@ -26,7 +27,11 @@
 		<canvas id="myChart" width="900" height="400"></canvas> 
 		<div style="text-align:center;">
 			<p>
-				Description 
+				Description :
+				<50% : 1,
+				50-70%: 1,
+				>75%: 1
+
 			</p>
 			<button id='btn'>Download</button>
 		</div>
