--- a/Web/assessment.html
+++ b/Web/assessment.html
@@ -27,14 +27,14 @@
             <ul class="nav nav-tabs">
               <li><a href="demo.html">Star_based</a></li>
               <li><a href="assessment.html">Assessment_based</a></li>
-              <li><a href="index.html">Attendence</a></li>
+              <li><a href="index.html">Attendance</a></li>
             </ul>
             <br>
             <!-- <p><strong>Note:</strong> This example shows how to create a basic navigation tab. It is not toggleable/dynamic yet (you can't click on the links to display different content)- see the last example in the Bootstrap Tabs and Pills Tutorial to find out how this can be done.</p> -->
     </div>
 
 	<div class="container" style="max-width: 800px;margin: auto">
-		<h1 style="text-align:center;">Assessment </h1>
+		<h1 style="text-align:center;">Assessment Report </h1>
 		<canvas id="myChart" width="900" height="400"></canvas> 
 		<div style="text-align:center;">
 			<p>
@@ -145,7 +145,7 @@
   		data: { 
   			labels: labels, 
   			datasets: [ 
-  			{ label: 'attendance %', 
+  			{ label: 'assessment score ( activity wise) ', 
   			data: data, 
 
   			backgroundColor : background
@@ -165,12 +165,16 @@ options: {
 			} ,
 			scaleLabel:{
 				display:true,
-				labelString:"Students"
+				labelString:"Score"
 			}
 		}] ,
 		xAxes: [{
 
-			barThickness: 100
+			barThickness: 100,
+      scaleLabel:{
+        display:true,
+        labelString:"Students"
+      }
 		}]
 
 	} 
