--- a/Web/demo.html
+++ b/Web/demo.html
@@ -8,7 +8,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"> </script>
 	<script src = "https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
-
+ 
 </head>
 <body>
 	<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
@@ -27,7 +27,7 @@
             <ul class="nav nav-tabs">
               <li><a href="demo.html">Star_based</a></li>
               <li><a href="assessment.html">Assessment_based</a></li>
-              <li><a href="index.html">Attendence</a></li>
+              <li><a href="index.html">Attendance</a></li>
             </ul>
             <br>
             <!-- <p><strong>Note:</strong> This example shows how to create a basic navigation tab. It is not toggleable/dynamic yet (you can't click on the links to display different content)- see the last example in the Bootstrap Tabs and Pills Tutorial to find out how this can be done.</p> -->
