--- a/Web/index.html
+++ b/Web/index.html
@@ -4,131 +4,48 @@
 	<title></title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"> </script>
 	<script src = "https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
+
 </head>
 <body>
 	<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-  <script src="/__/firebase/6.3.1/firebase-app.js"></script>
+	<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+	<script src="/__/firebase/6.3.1/firebase-app.js"></script>
 
-  <!-- Add Firebase products that you want to use -->
-  <script src="/__/firebase/6.3.1/firebase-auth.js"></script>
-  <script src="/__/firebase/6.3.1/firebase-firestore.js"></script>
+	<!-- Add Firebase products that you want to use -->
+	<script src="/__/firebase/6.3.1/firebase-auth.js"></script>
+	<script src="/__/firebase/6.3.1/firebase-firestore.js"></script>
 
-  <script src="/__/firebase/init.js"></script>
-
-  <div class="container" style="max-width: 800px;margin: auto">
-	<h1 style="text-align:center;">Attendance </h1>
-	<canvas id="myChart" width="900" height="400"></canvas> 
-	<div style="text-align:center;">
-	<p>
-		Description 
-	</p>
-
-</div>
+	<script src="/__/firebase/init.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 
+	<div class="container" style="max-width: 800px;margin: auto">
+		<h1 style="text-align:center;">Attendance </h1>
+		<canvas id="myChart" width="900" height="400"></canvas> 
+		<div style="text-align:center;">
+			<p>
+				Description 
+			</p>
+			<button id='btn'>Download</button>
+		</div>
 
 
-</body>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+
+
+	</body>
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#config-web-app -->
+	https://firebase.google.com/docs/web/setup#config-web-app -->
 
-<script>
+	<script src="scripts.js">
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "",
-    authDomain: "touchinglives-18148.firebaseapp.com",
-    databaseURL: "https://touchinglives-18148.firebaseio.com",
-    projectId: "touchinglives-18148",
-    storageBucket: "",
-    messagingSenderId: "1083204876142",
-    appId: "1:1083204876142:web:a4bc5ea5434f35de"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
 
-  // Get a reference to the database service
-  var database = firebase.database();
 
-  // var starCountRef = firebase.database().ref('posts/' + postId + '/starCount');
-  // starCountRef.on('value', function(snapshot) {
-  // updateStarCount(postElement, snapshot.val());
-  var ref= firebase.database().ref("attendance/");
-  ref.on("value", function(snapshot){
-  	var dbdata=snapshot.val();
-  	console.log(dbdata["20-07-2019"]);
-  },
-  	function(err){
-  	console.log(err.code);
-
-  	});
-
-  var ctx = document.getElementById("myChart"); 
-var data= [20,75,56,80,12];
-var background=[]
-var borderColor=[]
-for (i=0;i<data.length;i++){
- 	if(data[i]<50)
-			{color='rgba(255, 0, 0, 0.2)';}
-	else if(data[i]>50 && data[i]<75)
-			{color='rgba(255,165,0, 0.4)';}
-	else
-			{color='rgba(0, 255, 0, 0.2)';}
-	background.push(color);
-	borderColor.push(color);
-}
-
-var myChart = new Chart(ctx, { 
-type: 'bar', 
-data: { 
-	labels: ["S1", "s2" , "s3" , "s4", "s5", ], 
-	datasets: [ 
-	{ label: 'attendance %', 
-		data: data, 
-
-		backgroundColor : background
-		//[getColor(50),getColor(77),getColor(90),getColor(20),getColor(70)
-,
-
-borderColor: borderColor,
-borderWidth : 1 
-	} 
-	] 
-}, 
-options: { 
-		scales: { 
-			yAxes: [{ 
-				ticks: { 
-					beginAtZero:true 
-				} ,
-				scaleLabel:{
-					display:true,
-					labelString:"Students"
-				}
-			}] ,
-			xAxes: [{
-				
-				barThickness: 100
-			}]
-
-		} 
-	} 
-}); 
-// "<Button onclick ="dwn();">Download  </Button>"
-function getColor(data){
-	
-			if(data>50)
-				{color='rgba(0, 255, 0, 0.2)';}
-			else
-				{color='rgba(255, 0, 0, 0.2)';}
-		
-	return color;
-}
 
 </script>
 
