--- a/Web/demo.html
+++ b/Web/demo.html
@@ -137,7 +137,7 @@ options: {
             barThickness: 100,
             scaleLabel:{
 				display:true,
-				labelString:"Students"
+				labelString:"Students Id"
 			}
 		}]
 
